src/equipment/Equipment.css
.Equipment {
  background-size: 592px 785px, cover;
  width: 512px;
}
.Equipment hr {
  background-size: 520px 4px;
}

.equipment-grid {
  display: flex;
  flex-direction: row-reverse;
}

.equipment-gear {
  width: 256px;
}
.equipment-gear hr {
  background-size: 240px 4px;
}

.gear-slots-grid {
  display: flex;
}
.gear-slots-col {
  width: 80px;
}
.gear-slots-row-1 div,
.gear-slots-row-2 div,
.gear-slots-row-3 {
  background-repeat: no-repeat;
  background-position: center;
  border-radius: 4px;
  margin: 1px;
}
.gear-slots-row-1 div {
  height: 80px;
}
.gear-slots-row-2 div {
  height: 160px;
}
.gear-slots-row-3 {
  height: 240px;
}

.gear-slot {
  display: flex;
  align-items: center;
  justify-content: center;
}
.gear-slot.drop-target {
  background-image: url(../images/gearslot_over2.png);
}
.gear-slot-weapon-active {
  background-color: rgba(31, 53, 54, 0.8);
}

.gear-slot-chest {
  background-image: url(../images/gearslot_chest.png);
}
.gear-slot-chest.drop-target {
  background-image:
    url(../images/gearslot_chest.png),
    url(../images/gearslot_over2.png);
}

.gear-slot-feet {
  background-image: url(../images/gearslot_feet.png);
}
.gear-slot-feet.drop-target {
  background-image:
    url(../images/gearslot_feet.png),
    url(../images/gearslot_over2.png);
}

.gear-slot-hands {
  background-image: url(../images/gearslot_hands.png);
}
.gear-slot-hands.drop-target {
  background-image:
    url(../images/gearslot_hands.png),
    url(../images/gearslot_over2.png);
}

.gear-slot-head {
  background-image: url(../images/gearslot_head.png);
}
.gear-slot-head.drop-target {
  background-image:
    url(../images/gearslot_head.png),
    url(../images/gearslot_over2.png);
}

.gear-slot-legs {
  background-image: url(../images/gearslot_legs.png);
}
.gear-slot-legs.drop-target {
  background-image:
    url(../images/gearslot_legs.png),
    url(../images/gearslot_over2.png);
}

.gear-slot-mainHand,
.gear-slot-mainHand1,
.gear-slot-mainHand2,
.gear-slot-oneHand {
  background-image: url(../images/gearslot_mainhand.png);
}
.gear-slot-mainHand.drop-target,
.gear-slot-mainHand1.drop-target,
.gear-slot-mainHand2.drop-target,
.gear-slot-oneHand.drop-target {
  background-image:
    url(../images/gearslot_mainhand.png),
    url(../images/gearslot_over2.png);
}

.gear-slot-neck {
  background-image: url(../images/gearslot_neck.png);
}
.gear-slot-neck.drop-target {
  background-image:
    url(../images/gearslot_neck.png),
    url(../images/gearslot_over2.png);
}

.gear-slot-offHand,
.gear-slot-offHand1,
.gear-slot-offHand2 {
  background-image: url(../images/gearslot_offhand.png);
}
.gear-slot-offHand.drop-target,
.gear-slot-offHand1.drop-target,
.gear-slot-offHand2.drop-target {
  background-image:
    url(../images/gearslot_offhand.png),
    url(../images/gearslot_over2.png);
}

.gear-slot-ring,
.gear-slot-ring1,
.gear-slot-ring2 {
  background-image: url(../images/gearslot_ring.png);
}
.gear-slot-ring.drop-target,
.gear-slot-ring1.drop-target,
.gear-slot-ring2.drop-target {
  background-image:
    url(../images/gearslot_ring.png),
    url(../images/gearslot_over2.png);
}

.gear-slot-shoulders {
  background-image: url(../images/gearslot_shoulders.png);
}
.gear-slot-shoulders.drop-target {
  background-image:
    url(../images/gearslot_shoulders.png),
    url(../images/gearslot_over2.png);
}

.gear-slot-waist {
  background-image: url(../images/gearslot_belt.png);
}
.gear-slot-waist.drop-target {
  background-image:
    url(../images/gearslot_belt.png),
    url(../images/gearslot_over2.png);
}

.gear-slot-dummy {
  background-image: url(../images/silhouette_human_male.png);
  background-size: 100%;
}

.gear-slot-weapon-swap {
  background-image: url(../images/swap_button_up.png);
  transform: rotate(180deg);
}
.gear-slot-weapon-swap:hover {
  background-image:
    url(../images/swap_button_up.png),
    url(../images/swap_button_over.png);
}
.gear-slot-weapon-swap:active {
  transform: rotate(180deg) translate(1px, -1px);
}
.gear-slot-weapon-swap span {
  transform: rotate(180deg) !important;
}


/* equipement stats */
.equipment-stats table {
  width: 240px;
  color: #c5c29e;
}
.equipment-stats table td:nth-child(2) {
  color: white;
}

